--- a/src/control/view/PersonContactEditDialog.fxml
+++ b/src/control/view/PersonContactEditDialog.fxml
@@ -1,9 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.AnchorPane?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml"
-            xmlns="http://javafx.com/javafx"
-            fx:controller="control.view.PersonContactEditDialog"
-            prefHeight="400.0" prefWidth="600.0">
-
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="314.0" prefWidth="600.0"
+            xmlns="http://javafx.com/javafx/9.0.1" fx:controller="control.view.PersonContactEditController">
+    <children>
+        <GridPane layoutX="10.0" layoutY="97.0" minWidth="100.0" prefHeight="120.0" prefWidth="269.0"
+                  AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="15.0" prefWidth="100.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="15.0" prefWidth="100.0"/>
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            </rowConstraints>
+            <children>
+                <Label text="Введите фамилию:"/>
+                <Label text="Введите имя:" GridPane.rowIndex="1"/>
+                <Label text="Введите номер телефона:" GridPane.rowIndex="2"/>
+                <Label text="Введите адрес электронной почты:" GridPane.rowIndex="3"/>
+                <TextField GridPane.columnIndex="1"/>
+                <TextField fx:id="lastNameField" GridPane.columnIndex="1"/>
+                <TextField fx:id="firstNameField" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+                <TextField fx:id="telNumField" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+                <TextField fx:id="emailField" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+            </children>
+        </GridPane>
+        <Button layoutX="307.0" layoutY="231.0" mnemonicParsing="false" onAction="#handleOk" text="Ok"/>
+        <Button layoutX="523.0" layoutY="275.0" mnemonicParsing="false" onAction="#handleCancel" prefWidth="80.0"
+                text="Cancel" textOverrun="CENTER_WORD_ELLIPSIS"/>
+    </children>
+    <padding>
+        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+    </padding>
 </AnchorPane>
