--- a/src/control/view/RootLayout.fxml
+++ b/src/control/view/RootLayout.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.BorderPane?>
 <BorderPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="400.0" prefWidth="600.0"
@@ -13,9 +12,10 @@
                         <MenuItem mnemonicParsing="false" text="Close"/>
                     </items>
                 </Menu>
-                <Menu mnemonicParsing="false" text="Edit">
+                <Menu mnemonicParsing="false" text="Create">
                     <items>
-                        <MenuItem mnemonicParsing="false" text="Delete"/>
+                        <MenuItem mnemonicParsing="false" text="New contact"/>
+                        <MenuItem mnemonicParsing="false" text="New group"/>
                     </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Help">
