--- a/src/control/view/ContactsGroupAddDialog.fxml
+++ b/src/control/view/ContactsGroupAddDialog.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -18,9 +17,10 @@
             </rowConstraints>
             <children>
                 <Label text="Наименование группы:"/>
-                <TextField GridPane.columnIndex="1"/>
+                <TextField fx:id="groupName" GridPane.columnIndex="1"/>
             </children>
         </GridPane>
-        <Button layoutX="153.0" layoutY="151.0" mnemonicParsing="false" text="Add the group"/>
+        <Button layoutX="153.0" layoutY="151.0" mnemonicParsing="false" onAction="#handleAdd" text="Add the group"/>
+        <Button layoutX="318.0" layoutY="205.0" mnemonicParsing="false" onAction="#handleCancel" text="Cancel"/>
     </children>
 </AnchorPane>
