--- a/src/contacts/view/PersonContactOverview.fxml
+++ b/src/contacts/view/PersonContactOverview.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="300.0" prefWidth="600.0"
-            xmlns="http://javafx.com/javafx/9.0.1" fx:controller="control.view.PersonContactOverviewController">
+            xmlns="http://javafx.com/javafx/9.0.1" fx:controller="contacts.view.PersonContactOverviewController">
     <children>
         <SplitPane dividerPositions="0.29797979797979796" prefHeight="300.0" prefWidth="600.0"
                    AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
@@ -63,7 +63,7 @@
                             <buttons>
                                 <Button mnemonicParsing="false" onAction="#handleNewPersonContact" text="New..."/>
                                 <Button mnemonicParsing="false" onAction="#handleEditPersonContact" text="Edit..."/>
-                                <Button mnemonicParsing="false" onAction="#handleDeleteContact" text="Delete..."/>
+                                <Button mnemonicParsing="false" onAction="#handleDeleteContact" text="Delete"/>
                             </buttons>
                         </ButtonBar>
                         <ComboBox fx:id="groupBox" layoutX="228.0" layoutY="10.0" prefHeight="25.0" prefWidth="175.0"
