--- a/src/contacts/view/ContactsGroupEditDialog.fxml
+++ b/src/contacts/view/ContactsGroupEditDialog.fxml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.layout.AnchorPane?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml"
-            xmlns="http://javafx.com/javafx"
-            fx:controller="contacts.view.ContactsGroupEditDialog"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="181.0" prefWidth="305.0"
+            xmlns="http://javafx.com/javafx/9.0.1" fx:controller="contacts.view.ContactsGroupEditDialogController">
+    <children>
+        <ComboBox fx:id="groupBox" editable="true" layoutX="14.0" layoutY="26.0" prefWidth="150.0"
+                  promptText="Список групп"/>
+        <Button layoutX="240.0" layoutY="26.0" mnemonicParsing="false" onAction="#handleDeleteGroup" text="Delete"/>
+        <Button layoutX="233.0" layoutY="142.0" mnemonicParsing="false" onAction="#handleClose" text="Close"/>
+        <Button layoutX="181.0" layoutY="26.0" mnemonicParsing="false" onAction="#renameGroup" text="Save"/>
+    </children>
 </AnchorPane>
