--- a/src/contacts/view/ContactsGroupEditDialog.fxml
+++ b/src/contacts/view/ContactsGroupEditDialog.fxml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="181.0" prefWidth="305.0"
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="181.0" prefWidth="385.0"
             xmlns="http://javafx.com/javafx/9.0.1" fx:controller="contacts.view.ContactsGroupEditDialogController">
     <children>
-        <ComboBox fx:id="groupBox" editable="true" layoutX="14.0" layoutY="26.0" prefWidth="150.0"
-                  promptText="Список групп"/>
-        <Button layoutX="240.0" layoutY="26.0" mnemonicParsing="false" onAction="#handleDeleteGroup" text="Delete"/>
-        <Button layoutX="233.0" layoutY="142.0" mnemonicParsing="false" onAction="#handleClose" text="Close"/>
-        <Button layoutX="181.0" layoutY="26.0" mnemonicParsing="false" onAction="#renameGroup" text="Save"/>
+        <ComboBox fx:id="groupBox" editable="true" focusTraversable="false" layoutX="14.0" layoutY="26.0"
+                  prefWidth="150.0" promptText="Список групп"/>
+        <Button layoutX="170.0" layoutY="142.0" mnemonicParsing="false" onAction="#handleClose" text="Close"/>
+        <ButtonBar layoutX="164.0" layoutY="19.0" prefHeight="40.0" prefWidth="200.0">
+            <buttons>
+                <Button mnemonicParsing="false" onAction="#handleRenameGroup" text="Save"/>
+                <Button mnemonicParsing="false" onAction="#handleDeleteGroup" text="Delete"/>
+            </buttons>
+        </ButtonBar>
     </children>
 </AnchorPane>
