added SaveBtn and DeleteBtn disableProperties

--- a/src/contacts/views/RootLayout.fxml
+++ b/src/contacts/views/RootLayout.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.BorderPane?>
 <BorderPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="400.0" prefWidth="600.0"
-            xmlns="http://javafx.com/javafx/9.0.1" fx:controller="contacts.view.RootLayoutController">
+            xmlns="http://javafx.com/javafx/9.0.1" fx:controller="contacts.controllers.RootLayoutController">
     <top>
         <MenuBar BorderPane.alignment="CENTER">
             <menus>
