--- a/src/contacts/views/PersonContactEditDialog.fxml
+++ b/src/contacts/views/PersonContactEditDialog.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="314.0" prefWidth="600.0"
-            xmlns="http://javafx.com/javafx/9.0.1" fx:controller="contacts.view.PersonContactEditController">
+            xmlns="http://javafx.com/javafx/9.0.1" fx:controller="contacts.controllers.PersonContactEditController">
     <children>
         <GridPane layoutX="10.0" layoutY="97.0" minWidth="100.0" prefHeight="120.0" prefWidth="269.0"
                   AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
