--- a/src/contacts/views/PersonContactOverview.fxml
+++ b/src/contacts/views/PersonContactOverview.fxml
@@ -22,6 +22,14 @@
                             <columnResizePolicy>
                                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
                             </columnResizePolicy>
+                            <contextMenu>
+                                <ContextMenu>
+                                    <items>
+                                        <MenuItem fx:id="contextMenu" mnemonicParsing="false"
+                                                  onAction="#handleAddToGroup" text="Добавить в группу"/>
+                                    </items>
+                                </ContextMenu>
+                            </contextMenu>
                         </TableView>
                     </children>
                 </AnchorPane>
@@ -45,8 +53,8 @@
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                             </rowConstraints>
                             <children>
-                                <Label fx:id="lastNameLabel" text="Label" GridPane.columnIndex="1"/>
-                                <Label fx:id="firstNameLabel" text="Label" GridPane.columnIndex="1"
+                                <Label fx:id="firstNameLabel" text="Label" GridPane.columnIndex="1"/>
+                                <Label fx:id="lastNameLabel" text="Label" GridPane.columnIndex="1"
                                        GridPane.rowIndex="1"/>
                                 <Label fx:id="telephoneLabel" text="Label" GridPane.columnIndex="1"
                                        GridPane.rowIndex="2"/>
