--- a/src/contacts/views/PersonContactOverview.fxml
+++ b/src/contacts/views/PersonContactOverview.fxml
@@ -27,6 +27,8 @@
                                     <items>
                                         <MenuItem fx:id="contextMenu" mnemonicParsing="false"
                                                   onAction="#handleAddToGroup" text="Добавить в группу"/>
+                                        <MenuItem mnemonicParsing="false" onAction="#handleDeleteFromGroup"
+                                                  text="Удалить из группы"/>
                                     </items>
                                 </ContextMenu>
                             </contextMenu>
