--- a/src/common/views/ContactsGroupAddDialog.fxml
+++ b/src/common/views/ContactsGroupAddDialog.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" minHeight="100.0" minWidth="400.0" prefHeight="250.0" prefWidth="400.0"
             xmlns="http://javafx.com/javafx/9.0.1"
-            fx:controller="contacts.controllers.ContactsGroupAddDialogController">
+            fx:controller="common.controllers.ContactsGroupAddDialogController">
     <children>
         <GridPane layoutX="30.0" layoutY="84.0" minHeight="25.0" minWidth="300.0" prefHeight="25.0" prefWidth="340.0">
             <columnConstraints>
