--- a/src/common/views/PersonContactOverview.fxml
+++ b/src/common/views/PersonContactOverview.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="300.0" prefWidth="600.0"
-            xmlns="http://javafx.com/javafx/9.0.1" fx:controller="contacts.controllers.PersonContactOverviewController">
+            xmlns="http://javafx.com/javafx/9.0.1" fx:controller="common.controllers.PersonContactOverviewController">
     <children>
         <SplitPane dividerPositions="0.29797979797979796" prefHeight="300.0" prefWidth="600.0"
                    AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
